force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/aig_AI_Gov_Audit_Event__c.object-meta.xml
<CustomObject>
    <label>AI Gov Audit Event</label>
    <nameField>
        <displayFormat>AE-{0000000000}</displayFormat>
        <label>AI Gov Audit Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Gov Audit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>