force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_Change_Maker__c.field-meta.xml
<CustomField>
    <fullName>aig_Change_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Maker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Gov_Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>