force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>aig_Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>