force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_Field__c.field-meta.xml
<CustomField>
    <fullName>aig_Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>