force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_New_Value__c.field-meta.xml
<CustomField>
    <fullName>aig_New_Value__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>