force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_Object__c.field-meta.xml
<CustomField>
    <fullName>aig_Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>