force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_RecordId__c.field-meta.xml
<CustomField>
    <fullName>aig_RecordId__c</fullName>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>