force-app/main/default/objects/aig_AI_Gov_Audit_Event__c/fields/aig_Transaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>aig_Transaction_DateTime__c</fullName>
    <label>Transaction DateTime</label>
    <type>DateTime</type>
</CustomField>